# SwiftScripting

SwiftScripting1/: CMakeLists.txt
SwiftScripting1/App/: CMakeLists.txt  main.cpp
SwiftScripting1/SwiftLib/: CMakeLists.txt
SwiftScripting1/SwiftLib/src/: SwiftLib.swift
SwiftScripting1/cmake/: AddSwift.cmake
SwiftScripting2/: CMakeLists.txt
SwiftScripting2/App/: CMakeLists.txt  main.swift
SwiftScripting2/CppLib/: CMakeLists.txt
SwiftScripting2/CppLib/include/: CppLib.hpp  module.modulemap
SwiftScripting2/CppLib/src/: CppLib.cpp
